# pdf-parsing

./: Makefile  README.md  pyproject.toml
chagos/: main.py  template_extractor.py
data/: prompt  templates.json
data/output/: llm_based_output.json  tamplate_based_output.json
tests/unit/: test_main.py  test_template_extractor.py
