[tool.poetry]
name = "chagos"
version = "0.1.0"
description = "TheChagos interview task"
authors = ["Maqbool ur Rahim Khan <maqboolurrahim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pymupdf4llm = "^0.0.17"
markdown-analysis = "^0.1.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pytest = "^7.4.3"
ruff = "^0.1.9"
click = "^8.1.8"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
